# duet

srk/src/: bigtop.ml  convexHull.ml  convexHull.mli  dD.ml  dD.mli  dune  liraQuantifier.ml  liraQuantifier.mli  playground.ml  polyhedron.ml  polyhedron.mli  polyhedronLatticeTiling.ml  polyhedronLatticeTiling.mli  syntax.ml  syntax.mli
srk/test/: test_srk.ml
srk/test/lira-qe/: test-fractional-red-floor1.smt2  test-fractional-red-floor2.smt2  test-fractional-red-modulo1.smt2  test-fractional-red-modulo2.smt2  test-fractional-red-modulo3.smt2  test-fractional-red-modulo4.smt2  test-fractional-red-qe2.smt2  test-fractional-red-qe3.smt2  test-integer-red-modulo1.smt2  test-integer-red-modulo2.smt2  test-integer-red-qe1.smt2  test-integer-red-qe2.smt2  test-integer-red-qe3.smt2  test-real-reduction.smt2  testformula1.smt2  testformula2.smt2  testformula3.smt2
